--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.suikajy.moeproject">
-
     <application
         android:name=".MoeApplication"
         android:allowBackup="true"
@@ -18,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.account.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_activity_login"/>
     </application>
 
 </manifest>
